--- a/entrega_de_trabalhos.html
+++ b/entrega_de_trabalhos.html
@@ -16,7 +16,7 @@
 
 <ul>
 	<li> Aula 2 </li>
-	<li><a href="https://github.com/carolinaMarquess/Bruno_Aleixo/blob/main/bruno_aleixo.html"></a><h4>Bruno Aleixo</h4></li>
+	<li><a href="https://carolinamarquess.github.io/bruno_aleixo/"></a><h4>Bruno Aleixo</h4></li>
 </ul>
 
 </body>	
