--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <ul>
 	<li> Aula 1 </li>
 	<ul>
-	<li><a href="https://github.com/carolinaMarquess/hello_world"></a><h4>Hello_World</h4></li>	
+	<li><a href="https://github.com/carolinaMarquess/hello_world"><h4>Hello_World</h4></a></li>	
 	</ul>
 </ul>
 
 <ul>
 	<li> Aula 2 </li>
 	<ul>
-	<li><a href="https://carolinamarquess.github.io/bruno_aleixo/"></a><h4>Bruno Aleixo</h4></li>
+	<li><a href="https://carolinamarquess.github.io/bruno_aleixo/"><h4>Bruno Aleixo</h4></a></li>
 	</ul>
 </ul>
 
